# hr_suite_spot

./: .gitignore  README.md  pyproject.toml  render.yaml
hr_suite_spot/: app.py  wsgi.py
hr_suite_spot/booking/: booking_service.py  booking_utils.py  calendar.py  database.py  drive_integration.py  email.html  error_utils.py  event_planner.py  gmail.py  initial_availability.yaml  mailchimp_integration.py  period.py  quickstart.py  schema.sql  stripe_integration.py
hr_suite_spot/static/images/: hrsp_logo_main.png:Zone.Identifier
hr_suite_spot/static/javascript/: admin_input.js  appointment_picker.js  calendar.js  checkout.js  return.js
hr_suite_spot/static/stylesheets/: about_me.css  admin_input.css  application.css  booking.css  coaching_call.css  coaching_call_resources.css  contact_page.css  footer.css  misc_content.css  quote_block.css  resources.css  style_2.css  subscribe_template.css  test_core.css  test_style.css
hr_suite_spot/templates/: about.html  admin_input.html  booking.html  booking_confirmation.html  calendar.html  checkout.html  coaching_call.html  confirmation.html  contact.html  footer.html  index.html  index_2.html  layout.html  layout_2.html  quote_template.html  resources.html  resume.html  return.html  services.html  subscribe_template.html  test.html
tests/: test_app.py
