[tool.poetry]
name = "hr-suite-spot"
version = "0.1.0"
description = ""
authors = ["Robert Feconda <robby.feconda365@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
google-api-python-client = "^2.158.0"
google-auth-oauthlib = "^1.2.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
